Made it into a template and added element insertion.
The drawing of the tree is horrible and needs to be improved for debugging purposes.

--- a/QuadTree/QuadTree.vcxproj.filters
+++ b/QuadTree/QuadTree.vcxproj.filters
@@ -18,12 +18,9 @@
     <ClCompile Include="Src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\QuadTree.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Src\QuadTree.h">
+    <ClInclude Include="src\QuadTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
