--- a/QuadTree/QuadTree.vcxproj
+++ b/QuadTree/QuadTree.vcxproj
@@ -144,10 +144,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Src\Main.cpp" />
-    <ClCompile Include="Src\QuadTree.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Src\QuadTree.h" />
+    <ClInclude Include="src\QuadTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
