--- a/QuadTree/QuadTree.vcxproj
+++ b/QuadTree/QuadTree.vcxproj
@@ -143,9 +143,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ImageToVoxelGenerator.cpp" />
     <ClCompile Include="Src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ImageToVoxelGenerator.h" />
     <ClInclude Include="src\QuadTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
