--- a/QuadTree/QuadTree.vcxproj.filters
+++ b/QuadTree/QuadTree.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ImageToVoxelGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\QuadTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageToVoxelGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
